// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PassengerCard healthDocument present should display health document button 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
    </div>
    <div>
      <div
        class="health-document-btn"
      >
        <a
          class="button button_link button--fluid button--yellow"
          href="https://southwest.salesforce.com/healthDocs"
          target="_blank"
          title="View Health Documents"
          type="button"
        >
          View Health Documents
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard should not show kiosk message when MBP is available and should show view boarding pass button 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
    </div>
    <div>
      <div
        class="view-boarding-pass-btn"
      >
        <button
          class="button button--fluid button--yellow"
          title="SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS"
          type="button"
        >
          SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard should render correctly 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
    </div>
    <div>
      <div
        class="view-boarding-pass-btn"
      >
        <button
          class="button button--fluid button--yellow"
          title="SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS"
          type="button"
        >
          SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard should show boarding info when boarding group and position is available 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
    </div>
    <div
      class="passenger-card--boarding-info"
    >
      <div
        class="boarding-info--item-row"
      >
        <span
          class="boarding-info--item-label"
        >
          SHARED__BOARDING_INFORMATION__GROUP
        </span>
        <span
          class="boarding-info--item-content"
        >
           
          A
           
        </span>
      </div>
      <div
        class="boarding-info--item-row"
      >
        <span
          class="boarding-info--item-label"
        >
          SHARED__BOARDING_INFORMATION__POSITION
        </span>
        <span
          class="boarding-info--item-content"
        >
           
          18
           
        </span>
      </div>
    </div>
    <div>
      <div
        class="view-boarding-pass-btn"
      >
        <button
          class="button button--fluid button--yellow"
          title="SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS"
          type="button"
        >
          SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard should show companion label when passenger is companion 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
    </div>
    <div>
      <div
        class="view-boarding-pass-btn"
      >
        <button
          class="button button--fluid button--yellow"
          title="SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS"
          type="button"
        >
          SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard should show the TSA Icon when the passenger has TSA Precheck 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon"
        />
      </div>
    </div>
    <div>
      <div
        class="view-boarding-pass-btn"
      >
        <button
          class="button button--fluid button--yellow"
          title="SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS"
          type="button"
        >
          SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard should show the special assistance message when the passenger has SA items chosen 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
      <div
        class="flex passenger-card--special-assistance"
      >
        <i
          class="pblue xxlarge icon icon_exclamation-circle"
        />
        <p
          class="special-assistance-message"
        >
          Fake special assistance message
        </p>
      </div>
    </div>
    <div>
      <div
        class="view-boarding-pass-btn"
      >
        <button
          class="button button--fluid button--yellow"
          title="SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS"
          type="button"
        >
          SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard should use labelText on YellowButton if has value 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
    </div>
    <div>
      <div
        class="view-boarding-pass-btn"
      >
        <button
          class="button button--fluid button--yellow"
          title="button label"
          type="button"
        >
          button label
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard viewPassengerBoardingPass is null should render correctly 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
    </div>
    <div>
      <div>
        greyBoxMessage
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard viewUpgradedBoarding present healthDocument present and UPGRADED_BOARDING is true should display health document button 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
    </div>
    <div>
      <div>
        greyBoxMessage
      </div>
      <div
        class="health-document-btn"
      >
        <a
          class="button button_link button--fluid button--yellow"
          href="https://southwest.salesforce.com/healthDocs"
          target="_blank"
          title="View Health Documents"
          type="button"
        >
          View Health Documents
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard viewUpgradedBoarding present lap infant is present on booking and isInfant is true should display health document button 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
    </div>
    <div>
      <div
        class="view-boarding-pass-btn"
      >
        <button
          class="button button--fluid button--yellow"
          title="SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS"
          type="button"
        >
          SHARED__BUTTON_TEXT__VIEW_BOARDING_PASS
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PassengerCard viewUpgradedBoarding present should not show Upgraded Boarding button when UPGRADED_BOARDING is false 1`] = `
<div>
  <div
    class="passenger-card"
  >
    <div
      class="passenger-card--info"
    >
      <div
        class="lap-child-icon hide"
      />
      <div
        class="passenger-card--label"
      >
        <div
          class="passenger-card--passenger-type-label flex7"
        >
          PASSENGER
        </div>
      </div>
      <div
        class="passenger-card--content"
      >
        <div
          class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
        >
          Firstname Lastname
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="tsa-precheck-icon hide"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`PassengerCard viewUpgradedBoarding present should show Upgraded Boarding button when UPGRADED_BOARDING is true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="passenger-card"
      >
        <div
          class="passenger-card--info"
        >
          <div
            class="lap-child-icon hide"
          />
          <div
            class="passenger-card--label"
          >
            <div
              class="passenger-card--passenger-type-label flex7"
            >
              PASSENGER
            </div>
          </div>
          <div
            class="passenger-card--content"
          >
            <div
              class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
            >
              Firstname Lastname
            </div>
          </div>
          <div
            class="flex"
          >
            <div
              class="tsa-precheck-icon hide"
            />
          </div>
        </div>
        <div>
          <button
            class="passenger-card--upgraded-boarding-btn button button--fluid large button--grey"
            type="button"
          >
            Upgrade boarding position to A1 - A15
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="passenger-card"
    >
      <div
        class="passenger-card--info"
      >
        <div
          class="lap-child-icon hide"
        />
        <div
          class="passenger-card--label"
        >
          <div
            class="passenger-card--passenger-type-label flex7"
          >
            PASSENGER
          </div>
        </div>
        <div
          class="passenger-card--content"
        >
          <div
            class="passenger-card--name overflow-hidden nowrap ellipsis flex7"
          >
            Firstname Lastname
          </div>
        </div>
        <div
          class="flex"
        >
          <div
            class="tsa-precheck-icon hide"
          />
        </div>
      </div>
      <div>
        <button
          class="passenger-card--upgraded-boarding-btn button button--fluid large button--grey"
          type="button"
        >
          Upgrade boarding position to A1 - A15
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
